triviagame/force-app/main/default/objects/Trivia_Participant__c/Trivia_Participant__c.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game: trivia participant details</description>
    <label>Trivia Participant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trivia Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>