triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Age of the participant</description>
    <inlineHelpText>Age of the participant</inlineHelpText>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>