triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: city of the participant</description>
    <inlineHelpText>city of the participant</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>