triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: country of the participant</description>
    <inlineHelpText>country of the participant</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>