triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: email address of the participant</description>
    <inlineHelpText>Email address of the participant</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>