triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: first name of the participant</description>
    <inlineHelpText>first name of the participant</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>