triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/Is_Banned__c.field-meta.xml
<CustomField>
    <fullName>Is_Banned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce Trivia Multiplayer Game: check this to ban a participant</description>
    <inlineHelpText>check this to ban a participant</inlineHelpText>
    <label>Is Banned?</label>
    <type>Checkbox</type>
</CustomField>