triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: last name of the participant</description>
    <inlineHelpText>Last name of the participant</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>