triviagame/force-app/main/default/objects/Trivia_Participant__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Mobile Number, could have been of type phone however, phone fields can not be set as unique so had to choose text as field type.</description>
    <externalId>true</externalId>
    <inlineHelpText>Mobile Number which was first used to register and participate for the game</inlineHelpText>
    <label>Mobile Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>